# pose-evaluation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
datasets_to_dataframes_branch/examples/: Pose_Evaluation_Example.ipynb
examples/: Pose_Evaluation_Example.ipynb
pose_evaluation/: interpret_name.py
pose_evaluation/analysis/: analyze_scores.py  correlate_and_graph_intergloss_scores.py  count_files_by_hour.py  explore_metric_stats.py  generate_latex_figs.py  plot_dtw.py  st_parquet_viewer.py
pose_evaluation/evaluation/: add_semantic_and_lookalike_to_gloss_dfs.py  analyze_metric_stats.py  analyze_scores.py  analyze_scores_dask.py  analyze_scores_polars.py  analyze_with_dask.py  combine_semantic_and_lookalike.py  compare_two_poses.py  correlate_and_graph_intergloss_scores.py  count_files_by_hour.py  create_metrics.py  evaluate_signclip.py  explore_metric_stats.py  filter_parquets.py  fix_score_file_default_distance_names.py  generate_latex_figs.py  index_score_files.py  interpret_name.py  knn_eval.py  load_parquets.py  load_pyarrow_dataset.py  load_splits_and_run_metrics.py  load_splits_from_dataframe_csvs.py  mt_eval.py  plot_dtw.py  read_index.py  rename_metric_column.py  score_dataframe_format.py  score_poses_with_all_metrics.py  similar_gloss_pairs_viewer.py  test_create_metrics.py
pose_evaluation/evaluation/dataset_parsing/: add_embeddings_to_dataset_dataframe.py  asl_citizen_to_csv.py  asl_citizen_to_dataframe.py  collect_files.py  convert_folder_to_parquet.py  dataset_utils.py  gloss_utils.py  popsign_to_df.py  sem_lex_to_csv.py  sem_lex_to_dataframe.py
pose_evaluation/examples/: example_metric_construction.py
pose_evaluation/metrics/: aggregate_distances.py  aggregate_distances_strategy.py  alignment_strategy.py  ape_metric.py  base.py  base_embedding_metric.py  base_pose_metric.py  build_ham2pose_metrics.py  conftest.py  distance_functions.py  distance_measure.py  distance_metric.py  distsance_metric.py  dtw_metric.py  dynamic_time_warping_metric.py  embedding_distance_metric.py  ham2pose.py  ham2pose_distances.py  ham2pose_metrics.py  mask_strategies.py  mean_joint_distance_metric.py  mje_metric.py  mse_metric.py  ndtw_mje.py  ndtw_mje_metric.py  nonsense_measures.py  pose_processors.py  segmented_metric.py  signclip_distance_metric.py  signclip_metric.py  test_base.py  test_base_pose_metric.py  test_distance_metric.py  test_dtw_metric.py  test_embedding_distance_metric.py  test_ndtw_mje.py  test_pose_processors.py  test_signatures.py  test_signclip_distance_metric.py  trajectory_distance_metric.py
pose_evaluation/utils/: conftest.py  pose_utils.py  test_pose_utils.py
pose_evaluation/utils/test/test_data/: colin-1-HOUSE.pose  colin-2-HOUSE.pose  colin_20240904_12_20_56-SAD.pose  mediapipe_components_and_points.json
pose_evaluation/utils/test/test_data/mediapipe/mixed/: 000017451997373907346-LIBRARY.pose  SbTU6uS4cc1tZpqCnE3g.pose  Ui9Nq58yYSgkJslO02za.pose
pose_evaluation/utils/test/test_data/mediapipe/refined_landmarks/: colin-HOUSE-needs-trim.pose
pose_evaluation/utils/test/test_data/mediapipe/standard_landmarks/: mediapipe_components_and_points.json
