[project]
name = "pose-evaluation"
description = "Automatic Evaluation for Pose Files"
version = "0.0.1"
authors = [
    { name = "Zifan Jiang", email = "zifan.jiang@uzh.ch" },
    { name = "Colin Leong", email = "cleong1@udayton.edu" },
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "pose-format",
    "scipy",
    "torch",
    "numpy", # possibly could replace all with torch
    # for various vector/tensor similarities and distances in torch
    "sentence-transformers",
    # For reading .csv files, etc
    "pandas",
    # For segment similarity
    "sign_language_segmentation @ git+https://github.com/sign-language-processing/segmentation",
    "fastdtw",
    # alternative to fastdtw
    "dtaidistance",
    # so that we can have the "trim_pose" preprocessor
    "spoken-to-signed @ git+https://github.com/ZurichNLP/spoken-to-signed-translation.git",
    "typer",
    "torchmetrics",
    "kaleido", # for downloading figures
]

[project.optional-dependencies]
dev = [
    "pytest",
    # to plot metric evaluation results
    "matplotlib",
    "pytest-cov",
    "coverage-lcov",
    "ruff"
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# Target Python version. Ruff will use this to enable/disable rules.
# Adjust to your project's Python version (e.g., "py38", "py39", "py310", "py311")
target-version = "py312" # Example: adjust this to your actual Python version

[tool.ruff.lint]
# List of linter rules to enable.
# "I" is for isort-compatible import sorting.
# "D" is for pydocstyle (docstring style). You might need to refine 'ignore'
# or disable specific 'D' rules if they conflict with 'docformatter' or your style.
# See [https://docs.astral.sh/ruff/rules/](https://docs.astral.sh/ruff/rules/) for a full list and descriptions.
select = [
    "E", # Error
    "F", # Pyflakes
    "I", # isort (import sorting)
    "W", # Warning
    "C", # Complexity
    "N", # Naming conventions
    "UP", # pyupgrade
    "B", # Bugbear
    "A", # flake8-builtins
    "T", # flake8-bandit
    "Q", # flake8-quotes
    "RUF", # Ruff specific rules
]



# Set specific rule ignores or per-file ignores if needed.
# This replaces the Pylint 'disable' list.
ignore = [
    "T201", # `print` found
    "E501", # Line too long
    "B008", # Do not perform function call `typer.Option` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "C901", # `run_metrics_full_distance_matrix_batched_parallel` is too complex (12 > 10)
    "N816", # Our metrics use mixed cases
]

# This tells Ruff about your project's top-level modules
# so it can correctly group imports (e.g., your own code vs. third-party libs).
# Make sure to add "pose_evaluation" here.
[tool.ruff.lint.isort]
known-first-party = ["pose_evaluation"]
# You can add other isort-specific configurations here if you had them previously, e.g.:
# lines-after-imports = 2
# force-single-line = false

[tool.setuptools]
packages = [
    "pose_evaluation",
    "pose_evaluation.metrics",
    "pose_evaluation.utils",
    "pose_evaluation.evaluation",
]

[tool.pytest.ini_options]
addopts = "-v --cov=pose_evaluation --cov-report=term --cov-report=xml --cov-report=lcov --cov-report=html"
testpaths = ["pose_evaluation"]

[tool.coverage.run]
omit = [
    "pose_evaluation/*/test_*.py",
    "pose_evaluation/*/conftest.py"
]



